tests/instantiating/range_negative_value_in_list/stderr.golden
3:15: error: range property value must be natural, value with index 1 is negative -127
bus.fbd +3:23
   |
 3 |     PI param; range = [1, -127]
   |                       ^^^^^^^^^
